[project]
name = "xiaohongshu-ai-softpost"
version = "0.1.0"
description = "Dynamic Xiaohongshu soft-article generator with AI text+image and Playwright distribution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.35.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pillow>=10.3.0",
  "opencv-python>=4.10.0.84",
  "playwright>=1.45.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
softpost = "app.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
